--- a/code/src/components/css/heartButton.css
+++ b/code/src/components/css/heartButton.css
@@ -15,10 +15,15 @@
   width: 35px;
   height: 35px;
   border-radius: 50%;
+  padding: 0;
 }
 
 .heart-button:focus {
   outline: transparent;
+}
+
+.heart-button:hover {
+  background: white;
 }
 
 .heart-counting-text {
