--- a/code/src/Styles/header.css
+++ b/code/src/Styles/header.css
@@ -1,3 +1,30 @@
+/* Style for header */
 .header {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 80px;
 }
+
+.pulse-heart {
+    position: absolute;
+    animation:pulse 1s infinite;
+    margin-top: 20px;
+}
+
+@keyframes pulse {
+    0% {
+      font-size: 18px;
+    }
+    100% {
+        font-size: 28px;
+    }
+  }
+  
+
+@media only screen and (max-width: 400px) {
+    .header {
+        font-size: 24px;
+    }
+  }
