--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,14 +1,25 @@
-/* Basic styling */
-
 /* Fonts imported from google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Montserrat&display=swap');
 
-body {
+/* Basic styling */
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  text-rendering: optimizeLegibility;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Inconsolata', monospace;
+  font-family: 'Inconsolata','Courier New', Courier, monospace;
+  line-height: 1.7;
   background: #ffe9e9;
 }
 
@@ -27,11 +38,12 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 70%;
+  width: 85%;
 }
 
+/* Media queries - responsive design */
 @media only screen and (min-width: 700px) {
   .thoughts-container {
-    width: 50%;
+    width: 60%;
   }
 }
