--- a/code/src/components/happyForm.css
+++ b/code/src/components/happyForm.css
@@ -7,24 +7,33 @@
     display: inline-block;
     padding: 20px;
     box-shadow: 5px 10px;
+    font-family: 'Inconsolata', monospace;
 }
+
 textarea {
     width: 90%;
-    font-family: 'Inconsolata', monospace;
+    
 }
 
 .form-footer {
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
+    color:grey;
 }
 
 .form-footer button {
     height: 35px;
+    width: 200px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     border-radius: 25px;
     border: none;
     background-color:#F4ACAC;
     color: black;
+    font-family: 'Inconsolata', monospace;
 }
 
 .form-footer button:hover {
