--- a/code/src/component/message.css
+++ b/code/src/component/message.css
@@ -1,27 +1,41 @@
+.message-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .message {
-  max-width: 510px;
-  min-height: 100px;
+  width: 470px;
+  height: min-content;
+  /* display: flex;
+  flex-direction: column;
+  flex-wrap: wrap; */
+  /* justify-content: space-between;
+  align-content: flex-start;
+  align-items: flex-start; */
   background-color: rgb(255, 255, 255);
   color: black;
   box-shadow: 8px 8px 0 0 rgba(0, 0, 0, 1);
   border: 1px solid black;
   margin: 20px;
   /* display: inline-block; */
-  text-align: left;
-  padding: 10px;
+  /* text-align: left; */
+  padding: 20px;
   font-family: monospace, sans-serif;
 }
 
+.message-text {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: left;
+}
+
 .heart-button {
-  /* font-size: 15px; */
+  font-size: 30px;
   border-radius: 50%;
   border: none;
   background-color: rgb(250, 250, 250);
-  display: flex;
-  justify-content: center;
-  padding: 5px;
-  margin-bottom: -25px;
-  margin-left: -5px;
+  margin-top: auto;
   transition: all 0.3s ease-in-out;
 }
 
@@ -40,17 +54,22 @@
 
 .heart-icon {
   padding: 2px;
-  margin: 2px 0 0 2px;
+  margin: 3px 2px 0 2px;
+  display: flex;
+  align-content: center;
 }
 
 .num-hearts {
-  margin-left: 33px;
+  margin-left: 10px;
   color: #bebebe;
+  font-weight: 800;
+  letter-spacing: 2px;
+  /* display: flex; */
 }
 
 .time-stamp {
   /* font-size: 16px; */
   color: #bebebe;
-  font-weight: 900;
-  margin-left: 100px;
+  font-weight: 700;
+  margin-left: 200px;
 }
