--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,7 +11,7 @@ body {
       rgba(0, 0, 0, 0.4)
     ),
     url("./background-image.jpg");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-attachment: fixed;
 }
 
