--- a/code/src/index.css
+++ b/code/src/index.css
@@ -24,14 +24,13 @@ code {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 390px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .send-thought {
   border: 1px solid black;
-  width: 350px;
+  width: 90%;
   height: 135px;
   margin: 30px 0;
   padding: 10px;
@@ -89,11 +88,17 @@ code {
   color: #000000;
 }
 
+.thoughts-section {
+  width: 95%;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .thought-card {
   display: flex;
   flex-direction: column;
   border: 1px solid black;
-  width: 350px;
   height: 135px;
   margin-bottom: 30px;
   padding: 10px;
@@ -133,4 +138,18 @@ code {
   align-items: center;
   justify-content: space-between;
   margin-top: 5px;
+}
+
+@media (min-width: 768px) {
+  .main-container {
+    width: 390px;
+  }
+
+  .send-thought {
+    width: 358px;
+  }
+
+  .thoughts-section {
+    width: 380px;
+  }
 }
