--- a/code/src/Styles/index.css
+++ b/code/src/Styles/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap'); */
 
 body {
   margin: 0;
@@ -14,132 +14,10 @@ body {
   
 }
 
-.message{
-  font-family: 'Montserrat', sans-serif;
-  font-size: 20px;
-  /* width: 350px; */
-  word-break: break-word;
- }
-
-.message-time {
-  font-size: 15px;
-  margin-left: 10px;
-  color: #D3D3D3;
-} 
-
-.nrOfLikes{
-  color: #D3D3D3;
-}
-
-.message-card, .form-card {
-  width: 400px;
-  height: auto;
-  border: 1px solid #000;
-  margin-bottom: 30px; 
-  padding: 10px;
-  box-shadow: 6px 6px #000;
-}
-
- .message-card {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    background: #F5F5F5;
-} 
-
-.input-text{
-  width: 360px;
-  height: 80px; 
-  align-self: center;
-}
-
-.message {
-  width: 360px;
-}
 
 
-/* -----Form-card-------------- */
 
-.form-card{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  background: #f1dbda;
- 
-}
 
-.love {
-  margin-left: 20px;
-}
-
-.length {
-  align-self: flex-end;
-  margin-bottom: 10px;
-}
-
-.form-button{
-  background:  #ffadad;
-  width: 185px;
-  height: 40px;
-  border-radius: 20px;
-  border: none;
-  display: flex;
-  align-items: center;
-  margin-left: 20px;
-  margin-top: 15px; 
-  
-}
-
-.very-liked {
-  background:#DC143C;
-}
-
-.liked {
-  background: #ffadad;
-}
-
-.unliked {
-  background: #c9c0bb;
-}
-
-.heart-button {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 5px;
-}
-
-.heart-button:hover{
-  cursor: pointer;
-}
-
- .heart-container{
-   display: flex;
-   align-items: center;
-
- }
-
- @media (max-width: 498px){
-  .message-card, .form-card {
-    width: 350px;
-  }
- }
-
- @media (max-width: 430px){
-  .message-card, .form-card {
-    width: 300px;
-  }
- }
-
- @media (max-width: 373px){
-  .message-card, .form-card {
-    width: 250px;
-  }
- }
 
 
 
