--- a/code/src/index.css
+++ b/code/src/index.css
@@ -17,6 +17,17 @@ code {
     monospace;
 }
 
+/* Styling MessageInput -----------------------------------------------*/
+
+h1 {
+  margin-top: 60px;
+  font-size: 32px;
+  text-align: center;
+}
+.new-message-container {
+  width: 500px;
+  height: 400px;
+}
 
 form {
   margin-top: 30px;
@@ -26,49 +37,38 @@ form {
   box-shadow: 6px 7px;
 }
 
-.form-text{
-  margin:8px;
-  font-size:26px; 
+.input-text {
+  margin: 8px;
+  font-size: 20px;
 }
 
-.form-button{
-  margin:8px;
-  font-size:26px;
-
+.message-button {
+  margin: 10px;
+  padding: 3px;
+  font-size: 15px;
 }
 
-.message{
-  margin:8px;
-  font-size:26px; 
+.message-time {
+  margin: 8px;
+  font-size: 18px;
+  color: #6e6e6e;
 }
 
-.message-time{
-  margin:8px;
-  font-size:18px;
-  color:#6e6e6e;
+.heart-icon {
+  padding-left: 5px;
+  padding-right: 7px;
 }
 
-/* STYLING AV KNAPPAR OCH DERAS DELAR */
-/* .superLiked
-.liked
-.notLiked */
+.maximum-letters {
+  padding-left: 10px;
+  text-align: right;
+  padding-right: 10px;
+}
 
+/* Styling MessageList  -------------------------------- */
 
-body {
-  margin: 0;
-  font-family: 'Menlo Regular', monospace, 'Courier New', Courier;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-weight: 500;
-  font-size: 16px;
-  background: #fff;
+.message-list-container {
   display: flex;
-  justify-content: center;
-}
-
-.message-container {
-  width: 500px;
-  height: 400px;
 }
 
 .message-list {
@@ -79,19 +79,34 @@ body {
   box-shadow: 6px 7px;
 }
 
-h1 {
-  margin-top: 60px;
-  font-size: 32px;
-  text-align: center;
+/* .messages-stored {
+
+} */
+
+.message {
+  margin: 8px;
+  font-size: 26px;
 }
 
-/* Text form */
-form {
-  
-  margin-top: 30px;
-  padding-top: 3px;
-  border: 2px solid #4d4d4d;
-  background: #f2f0f0;
-  box-shadow: 6px 7px;
+/* Not working */
+.heart-button {
+  border: 50%;
 }
 
+/* .post-time{
+
+} */
+
+/* Styling of heart ----------------------------------------------------------- */
+
+.notLiked {
+  background-color: grey;
+}
+
+.superLiked {
+  background-color: hotpink;
+}
+
+.liked {
+  background-color: lightgreen;
+}
