--- a/code/src/component/message.css
+++ b/code/src/component/message.css
@@ -73,3 +73,15 @@
   font-weight: 700;
   margin-left: 200px;
 }
+
+/* Media queries  */
+@media only screen and (max-width: 600px) {
+  .message {
+    max-width: 300px;
+  }
+
+  .time-stamp {
+    margin-left: 100px;
+    font-size: 12px;
+  }
+}
