--- a/code/src/footer.css
+++ b/code/src/footer.css
@@ -25,3 +25,15 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+/* MEDIA QUERIES */
+
+@media (min-width: 768px) {
+  .signature {
+    font-size: 15px;
+  }
+
+  .attribution {
+    font-size: 12px;
+  }
+}
