--- a/code/src/index.css
+++ b/code/src/index.css
@@ -17,6 +17,11 @@ code {
     monospace;
 }
 
+/* find it in app.js------------- */
+/* .message-container{
+
+} */
+
 /* Styling MessageInput -----------------------------------------------*/
 
 h1 {
@@ -68,10 +73,14 @@ form {
 /* Styling MessageList  -------------------------------- */
 
 .message-list-container {
+  width: 500px;
+  height: 300px;
+  border: 3px solid green;
   display: flex;
 }
 
 .message-list {
+ 
   margin-top: 30px;
   padding-top: 3px;
   border: 2px solid #4d4d4d;
