--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,11 +5,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: lightpink;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+p {
+  font-family: "Roboto Mono", monospace;
+  font-size: 13px;
+}
+
+h1 {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 article {
@@ -18,44 +35,55 @@ article {
   border-width: thin;
   box-shadow: 8px 5px black;
   margin: 20px;
-  width: 400px;
+  width: 300px;
   padding: 10px;
+  word-wrap: break-word;
+  background-color: white;
 }
+
 form {
   border: black;
   border-style: solid;
   border-width: thin;
   box-shadow: 8px 5px black;
   margin: 20px;
-  width: 400px;
+  width: 300px;
   padding: 10px;
-  background-color:rgb(242,240,240);
+  background-color: rgb(242, 240, 240);
   line-height: 1.6;
+  display: flex;
+  flex-direction: column;
 }
 
-.hearts-container{
-  display:flex;
+.input-button {
+  margin-top: 10px;
+  width: 200px;
+  background-color: lightpink;
+  border: none;
+  padding: 5px;
+  border-radius: 30px;
+  font-family: "Trispace", sans-serif;
+  font-weight: bold;
+  cursor: pointer;
+  font-weight: 400;
+}
+
+.heart-container {
+  display: flex;
   justify-content: space-between;
-}
-.hearts-button{
-  border-radius: 50%;
-  background-color:rgb(255,173,173);
-}
-p {
-  font-family: 'Roboto Mono', monospace;
-  font-size: 13px;
-}
-.hearts-container{
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  color:grey;
-  font-size: 12px;
+  color: grey;
 }
 
-h1{
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  font-size: 14px;
+.heart-button {
+  margin-right: 10px;
+  border: none;
+  border-radius: 50%;
+  height: 35px;
+  width: 35px;
+}
+.thoughts-textarea {
+  resize: none;
+}
+.time-created {
+  margin-top: 22px;
 }
