--- a/code/src/index.css
+++ b/code/src/index.css
@@ -14,49 +14,49 @@ code {
 }
 
 .header {
-  font-size: 80px;
+  font-size: 50px;
   padding: 20px;
   text-align: center;
-  margin-top: 100px;
-  
 }
 
 .header p {
-  font-size: 40px;
+  font-size: 26px;
   color:#FFADAD;
 }
 
 .form-container {
-  background-color: #f3f1f1;
-  border: 2px solid #000;
-  box-shadow: 6px 6px #000;
-  width: 450px;
-  margin: 40px auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 80%;
+  max-width: 500px;
+  margin: 0 auto 40px auto;
   padding: 20px;
+  background-color: #f3f1f1;
+  border: 2px solid #000;
+  box-shadow: 6px 6px #000;
 }
 
 .thought-list {
   display: flex;
   flex-direction: column;
-
   align-items: center;
   text-align: left;
 }
 
 .thought-container {
-  background-color: #fff;
-  border: 2px solid #000;
-  box-shadow: 6px 6px #000;
-  width: 450px;
-  margin: auto;
-  margin-bottom: 40px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 80%;
+  max-width: 500px;
+  margin: auto;
+  margin-bottom: 40px;
   padding: 20px;
+  background-color: #fff;
+  border: 2px solid #000;
+  box-shadow: 6px 6px #000;
+  word-wrap: break-word;
 }
 
 .like-button {
@@ -65,6 +65,7 @@ code {
   border-radius: 50%;
   border: none;
 }
+
 .like-container {
   display: flex;
   flex-direction: row;
@@ -90,4 +91,16 @@ code {
 .created {
   font-size: 16px;
   color: #6d6c6c;
+}
+
+@media only screen and (min-width: 600px) {
+  .header {
+    font-size: 80px;
+    padding: 20px;
+    text-align: center;
+    margin-top: 100px;
+  }
+  .header p {
+    font-size: 40px;
+  }
 }
