--- a/code/src/Styles/messageOutput.css
+++ b/code/src/Styles/messageOutput.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
-
+/* @import "path/to/font-awesome/less/font-awesome.less"; */
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 
 .message-card, .form-card {
     width: 400px;
@@ -82,6 +83,12 @@
     margin-top: 15px; 
     
   }
+
+  /* -------------Footer----------- */
+
+  .footer-text{
+     font-family: 'Itim', cursive;
+ }
 
   /* -------Media-queries------------- */
   
