--- a/code/src/HappyForm.css
+++ b/code/src/HappyForm.css
@@ -27,7 +27,6 @@
 .happy-form-heading {
   margin: 20px;
   font-size: 18px;
-  /* letter-spacing: 1px; */
 }
 
 .happy-form-text,
@@ -77,7 +76,8 @@
     font-size: 20px;
   }
 
-  .happy-form-text {
+  .happy-form-text,
+  .happy-form-text-too-long {
     width: 92%;
     font-size: 18px;
   }
@@ -107,7 +107,8 @@
     margin: 25px auto;
   }
 
-  .happy-form-text {
+  .happy-form-text,
+  .happy-form-text-too-long {
     width: 92%;
     font-size: 22px;
   }
@@ -124,5 +125,11 @@
 
   .form-footer p {
     font-size: 18px;
+  }
+}
+
+@media(min-width:1024px) {
+  .happy-form {
+    max-width: 850px;
   }
 }
