--- a/code/src/components/thought-input.css
+++ b/code/src/components/thought-input.css
@@ -4,12 +4,8 @@
   border: 1px solid black;
   padding: 20px;
   background-color: #CDCDCD;
-  margin-bottom: 40px;
+  margin: 40px 0;
   word-wrap: break-word;
-}
-
-label {
-  border: 1px solid green;
 }
 
 .input {
