--- a/code/src/index.css
+++ b/code/src/index.css
@@ -106,7 +106,7 @@ form {
   width: 60%;
   min-height: 80px;
   margin-top: 50px;
-  padding: 40px; 
+  padding: 20px 40px; 
   border: 1px solid black;
   box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
 -webkit-box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
@@ -116,7 +116,7 @@ form {
 .message-time {
   display: flex;
   justify-content: flex-end; 
-  padding-top: 80px;
+  padding-top: 20px;
   font-size: 15px;
   color: #b3b2b1;
 }
