--- a/code/src/components/header.css
+++ b/code/src/components/header.css
@@ -1,8 +1,7 @@
-
 h1 {
   font-size: 39px;
   text-align: center;
-  font-family: 'Amatic SC', cursive;
+  font-family: "Amatic SC", cursive;
   margin: 10px 0 20px 0;
   color: #b63393;
 }
