--- a/code/src/components/loader.css
+++ b/code/src/components/loader.css
@@ -17,7 +17,7 @@
 }
 
 .loader-line-wrap {
-  animation: spin 2000ms cubic-bezier(.175, .885, .32, 1.275) infinite;
+  animation: spin 2000ms cubic-bezier(0.175, 0.885, 0.32, 1.275) infinite;
   box-sizing: border-box;
   height: 50px;
   left: 0;
@@ -41,11 +41,21 @@
   width: 100px;
 }
 
-.loader-line-wrap:nth-child(1) { animation-delay:  -50ms; }
-.loader-line-wrap:nth-child(2) { animation-delay: -100ms; }
-.loader-line-wrap:nth-child(3) { animation-delay: -150ms; }
-.loader-line-wrap:nth-child(4) { animation-delay: -200ms; }
-.loader-line-wrap:nth-child(5) { animation-delay: -250ms; }
+.loader-line-wrap:nth-child(1) {
+  animation-delay: -50ms;
+}
+.loader-line-wrap:nth-child(2) {
+  animation-delay: -100ms;
+}
+.loader-line-wrap:nth-child(3) {
+  animation-delay: -150ms;
+}
+.loader-line-wrap:nth-child(4) {
+  animation-delay: -200ms;
+}
+.loader-line-wrap:nth-child(5) {
+  animation-delay: -250ms;
+}
 
 .loader-line-wrap:nth-child(1) .loader-line {
   border-color: #b63393;
@@ -62,14 +72,14 @@
 }
 
 .loader-line-wrap:nth-child(3) .loader-line {
-  border-color:	#47eb47;
+  border-color: #47eb47;
   height: 62px;
   width: 62px;
   top: 21px;
 }
 
 .loader-line-wrap:nth-child(4) .loader-line {
-  border-color: 	#47ebeb;
+  border-color: #47ebeb;
   height: 48px;
   width: 48px;
   top: 28px;
@@ -83,7 +93,8 @@
 }
 
 @keyframes spin {
-  0%, 15% {
+  0%,
+  15% {
     transform: rotate(0);
   }
   100% {
