--- a/code/src/components/messageList.css
+++ b/code/src/components/messageList.css
@@ -6,17 +6,17 @@
   padding: 15px;
   margin-bottom: 30px;
   border: 1px solid lightgrey;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: box-shadow 500ms ease;
   color: #121212;
 }
 
 .message-card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .message {
-  font-family: 'Kalam', cursive;
+  font-family: "Kalam", cursive;
   font-weight: 300;
   letter-spacing: 1px;
   font-size: 16px;
@@ -36,7 +36,7 @@
   height: 45px;
   border: 1px solid lightgrey;
   border-radius: 50%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -48,7 +48,7 @@
   transition: all 300ms ease-in-out;
 }
 
-.like-button:hover .heart{
+.like-button:hover .heart {
   transform: scale(1.6);
 }
 
