--- a/code/src/components/thoughts-list.css
+++ b/code/src/components/thoughts-list.css
@@ -38,3 +38,12 @@ li {
   margin-top: 10px;
   cursor: pointer;
 }
+
+.pink-background {
+  border: 1px solid #F2F0F0;
+  border-radius: 50%;
+  background-color: #FFADAD;
+  padding: 10px;
+  margin-top: 10px;
+  cursor: pointer;
+}
