--- a/code/src/Components/HappyThoughts.css
+++ b/code/src/Components/HappyThoughts.css
@@ -5,9 +5,10 @@
     border: 1.5px solid black;
     box-shadow: 7px 7px black;
     width: 500px;
-    height: 100px;
+    height: max-content;
     margin: 20px;
     padding: 20px;
+    word-wrap: break-word;
   }
   
   .happy-thoughts h3 {
